# sensor-xensiv-bgt60trxx

./: .clang-format  .clang-tidy  .gitignore  CI_QUICK_REFERENCE.md  CI_TROUBLESHOOTING.md  CMakeLists.txt  CONTRIBUTING.md  FILE_RENAME_SUMMARY.md  FINAL_STATUS.md  IMPLEMENTATION_SUMMARY.md  KAS_CI_FIX_SUMMARY.md  KAS_IMPLEMENTATION.md  Makefile.am  PROJECT_REVIEW.md  README.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.1.1.md  YOCTO_DUAL_LTS.md  build.sh  configure.ac  kas-build.sh  test_integration.c  validate-kas.sh  xensiv_bgt60trxx.c  xensiv_bgt60trxx.h  xensiv_bgt60trxx.pc.in  xensiv_bgt60trxx_linux.c  xensiv_bgt60trxx_linux.h  xensiv_bgt60trxx_mtb.c  xensiv_bgt60trxx_mtb.h  xensiv_bgt60trxx_platform.h  xensiv_bgt60trxx_regs.h
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  platform_support.md
.github/workflows/: ci.yml  quality.yml  release.yml  yocto.yml
cmake/: xensiv_bgt60trxx-config.cmake.in
examples/: CMakeLists.txt  Makefile.am  basic_example.c  config_example.c  fifo_example.c
kas/: README.md  base-image-scarthgap.yml  base-image.yml  cache-info.sh  xensiv-bgt60trxx-rpi4-kirkstone-ci.yml  xensiv-bgt60trxx-rpi4-scarthgap-ci.yml  xensiv-bgt60trxx-rpi4-scarthgap.yml  xensiv-bgt60trxx-rpi4.yml  xensiv-bgt60trxx-test-kirkstone-ci.yml  xensiv-bgt60trxx-test-scarthgap-ci.yml  xensiv-bgt60trxx-test-scarthgap.yml  xensiv-bgt60trxx-test.yml
meta-xensiv-bgt60trxx/conf/: layer.conf
meta-xensiv-bgt60trxx/recipes-core/images/: xensiv-bgt60trxx-test-image.bb
meta-xensiv-bgt60trxx/recipes-core/packagegroups/: packagegroup-xensiv-bgt60trxx-dev.bb
meta-xensiv-bgt60trxx/recipes-libs/xensiv-bgt60trxx/: xensiv-bgt60trxx_git.bb
yocto/: xensiv-bgt60trxx.conf  xensiv-bgt60trxx_1.0.0.bb  xensiv-bgt60trxx_1.1.0.bb  xensiv-bgt60trxx_1.1.1.bb  xensiv-bgt60trxx_git.bb
